--- a/lib/install/package.json
+++ b/lib/install/package.json
@@ -2,7 +2,6 @@
   "name": "myapp",
   "private": "true",
   "scripts": {
-    "build": "esbuild app/javascript/application.js  --outfile=app/assets/esbuilds/application.js --bundle",
-    "watch": "npm run build -- --watch"
+    "build": "esbuild app/javascript/application.js  --outfile=app/assets/esbuilds/application.js --bundle"
   }
 }
