--- a/lib/install/package.json
+++ b/lib/install/package.json
@@ -2,6 +2,6 @@
   "name": "myapp",
   "private": "true",
   "scripts": {
-    "build": "esbuild app/javascript/application.js  --outfile=app/assets/esbuilds/application.js --bundle"
+    "build": "node app/assets/config/esbuild.js"
   }
 }
